--- a/css/style_index.css
+++ b/css/style_index.css
@@ -4,6 +4,12 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+
+.kullaniciBilgileriSagUstKose{
+	width: 100%;
+	
+}
+
 html, body{
     font-size: 100%;
 	font-family: 'Roboto Condensed', sans-serif;
