--- a/css/style_index.css
+++ b/css/style_index.css
@@ -10,6 +10,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	
 }
 
+.checkboxes{
+	width: 50px;
+	height: 50px;
+}
+
+.odemeEkraniLabel{
+	font-size:20px;
+}
+
 html, body{
     font-size: 100%;
 	font-family: 'Roboto Condensed', sans-serif;
